examples/invalid/test34.alice

The looking-glass hatta ()
opened 
  x was a number.
closed
